# az-economic-divergence

./: .gitignore  README.md  pyproject.toml
collect/: 01_worldbank.py  02_fred.py
data/: README.md
notebooks/: 00_sql_exploration.ipynb
src/azdata/: paths.py
src/azdata/collect/: fred.py  statgov.py  worldbank.py
